Corrections on UI and some validations on Cart,OrderMaster and orderDetail Tables.

--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -10,6 +10,7 @@
     Layout = "UserLayout";
 
 }
+<body style="background-color:rgb(220, 204, 255);font-family:Garamond, serif;">
 @*<head>
     <link rel="stylesheet" href="~/css/StyleSheet.css">
 </head>*@
@@ -205,7 +206,7 @@
         </form>
     </div>
 </div>
-
+</body>
 @*<div>
     <a asp-action="Index">Back to List</a>
 </div>*@
