--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
     Layout = "AdminLayout";
 }
-
+<body style="background-color:rgb(214, 245, 214);font-family:Garamond, serif;">
 <h1>Create</h1>
 
 <h4>MovieTbl</h4>
@@ -54,7 +54,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
