--- a/Views/OrderDetails/Details.cshtml
+++ b/Views/OrderDetails/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-
+<body style="background-color:rgb(220, 204, 255);font-family:Garamond, serif;">
 <h1>Ticket Cancellation</h1>
 
 <h3>Are you sure you want to Cancel Ticket?</h3>
@@ -67,3 +67,4 @@
         <a asp-action="Cancel" asp-route-id="@Model?.OrderDetailId" class="btn btn-danger">Cancel Ticket Now</a> |
         <a asp-action="Index">Back to History</a>
 </div>
+</body>
