--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
     Layout = "zLayout";
 }
-
+<body style="background-color:rgb(255, 255, 204);font-family:Garamond, serif;">
 <h1>Register</h1>
 
 <h4>User Registration</h4>
@@ -39,6 +39,7 @@
         </form>
     </div>
 </div>
+</body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
