--- a/Views/Booking/Payment.cshtml
+++ b/Views/Booking/Payment.cshtml
@@ -7,12 +7,11 @@
 }
 
 
-
-<h1>Payment</h1>
-
+<body style="background-color:rgb(220, 204, 255);font-family:Garamond, serif;">
 
 
-<h4>Payment Details</h4>
+
+<h1>Payment Details</h1>
 
 
 
@@ -63,7 +62,7 @@
         </form>
     </div>
 </div>
-
+</body>
 
 
 
