--- a/Views/Movie/Delete.cshtml
+++ b/Views/Movie/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
     Layout = "AdminLayout";
 }
-
+<body style="background-color:rgb(214, 245, 214);font-family:Garamond, serif;">
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -57,3 +57,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+</body>
