--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
     Layout = "zLayout";
 }
-
+<body style="background-color:rgb(255, 255, 204);font-family:Garamond, serif;">
 <h1>Login</h1>
 
 <h4>User</h4>
@@ -25,12 +25,12 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Sign In" class="btn btn-primary" />
+                    <input type="submit" value="Sign In" class="btn btn-info" />
             </div>
         </form>
     </div>
 </div>
-
+</body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
